removed demo labels

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -73,9 +73,9 @@
   "dashboard.otp.title": "Générer un nouvel One-Time-Password",
   "dashboard.otp.description": "Vous pouvez ici générer un nouvel One-Time-Password. Vous avez besoin du mot du One-Time-Password pour pouvoir générer automatiquement des certificats Covid avec votre system primaire (par exemple, le système d'information du cabinet, le logiciel de la clinique ou la solution pour pharmaciens). Le One-Time-Password est valable pendant 12 heures.",
   "dashboard.otp.action": "Générer un One-Time-Password",
-  "dashboard.upload.action": "Générer plusieurs certificats (BETA)",
+  "dashboard.upload.action": "Générer plusieurs certificats",
   "dashboard.upload.description": "Vous pouvez générer ici plusieurs certificats.",
-  "dashboard.upload.title": "Générer plusieurs certificats (BETA)",
+  "dashboard.upload.title": "Générer plusieurs certificats",
   "footer.built.prefix": "Développé avec",
   "footer.built.suffix": "",
   "footer.legal": "Conditions d'utilisation",
@@ -114,9 +114,9 @@
   "upload.file.upload": "Générer des certificats",
   "upload.file.upload.success": "Les certificats ont été créés avec succès. Veuillez vérifier le fichier ZIP retourné.",
   "upload.instructions": "Vous pouvez générer plusieurs certificats. Pour ce faire, veuillez sélectionnez le type des certificats à générer et chargez le fichier CSV contenant les données.",
-  "upload.link": "Générer plusieurs certificats (BETA)",
+  "upload.link": "Générer plusieurs certificats",
   "upload.templates": "Modèles pour l'envoi de CSV.",
-  "upload.title": "Générer plusieurs certificats (BETA)",
+  "upload.title": "Générer plusieurs certificats",
   "upload.type": "Sélectionnez le type de certificat",
   "validation.error.http.470": "Format de l'UVCI invalide",
   "validation.error.http.480": "UVCI déjà verrouillé",
