--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -73,9 +73,9 @@
   "dashboard.otp.title": "Neues One-Time-Password generieren",
   "dashboard.otp.description": "Hier können Sie ein neues One-Time-Password generieren. Das One-Time-Password benötigen Sie, um mit Ihrer Primäranwendung (z.B. Praxisinformationssystem, Kliniksoftware oder Apothekerlösung) automatisiert Covid-Zertifikate erzeugen zu können. Das One-Time-Password ist jeweils 12 Stunden gültig.",
   "dashboard.otp.action": "One-Time-Password generieren",
-  "dashboard.upload.action": "Mehrere Zertifikate generieren (BETA)",
+  "dashboard.upload.action": "Mehrere Zertifikate generieren",
   "dashboard.upload.description": "Hier können Sie mehrere Zertifikate generieren.",
-  "dashboard.upload.title": "Mehrere Zertifikate generieren (BETA)",
+  "dashboard.upload.title": "Mehrere Zertifikate generieren",
   "footer.built.prefix": "Mit",
   "footer.built.suffix": "gebaut",
   "footer.legal": "Rechtliches",
@@ -114,9 +114,9 @@
   "upload.file.upload": "Zertifikate generieren",
   "upload.file.upload.success": "Zertifikate wurden erfolgreich erstellt. Bitte prüfen Sie die zurückgegebene ZIP Datei.",
   "upload.instructions": "Sie können hier mehrere Zertifikate generieren. Wählen Sie dazu bitte den Typ der zu erstellenden Zertifikate aus und laden Sie die CSV-Datei mit den Daten.",
-  "upload.link": "Mehrere Zertifikate generieren (BETA)",
+  "upload.link": "Mehrere Zertifikate generieren",
   "upload.templates": "Vorlagen zum CSV Upload.",
-  "upload.title": "Mehrere Zertifikate generieren (BETA)",
+  "upload.title": "Mehrere Zertifikate generieren",
   "upload.type": "Zertifikatstype auswählen",
   "validation.error.http.470": "Ungültiges UVCI-Format",
   "validation.error.http.480": "UVCI wurde bereits gesperrt",
