--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,7 +75,7 @@
   "dashboard.otp.action": "Generate One-Time-Password",
   "dashboard.upload.action": "Generate multiple certificates  (BETA)",
   "dashboard.upload.description": "Here you can generate multiple certificates.",
-  "dashboard.upload.title": "Generate multiple certificate  (BETA)",
+  "dashboard.upload.title": "Generate multiple certificate",
   "footer.built.prefix": "Developed with",
   "footer.built.suffix": "",
   "footer.legal": "Terms and conditions",
