--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Land der Testdurchführung",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten postiven Resultats",
   "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
+  "certificateCreate.form.label.shipping": "Versand Option",
   "certificateCreate.form.group.personalData": "Personalien",
   "certificateCreate.form.group.vaccine": "Impfung",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Antigen-Schnelltest",
   "certificateCreate.form.group.recovery": "Genesung",
+  "certificateCreate.shipping.app.code": "Zustellungscode",
+  "certificateCreate.shipping.options": "Versand option auswählen",
+  "certificateCreate.shipping.options.app": "Zertifikat in der App liefern",
+  "certificateCreate.shipping.options.pdf": "Zertifikat im PDF format liefern",
+  "certificateCreate.shipping.options.post": "Zertifikat per Post liefern",
+  "certificateCreate.shipping.post.cantonCodeSender": "Absender Kanton-Code",
+  "certificateCreate.shipping.post.city": "Stadt",
+  "certificateCreate.shipping.post.streetAndNr": "Strasse und Hausnummer",
+  "certificateCreate.shipping.post.zipCode": "Postleitzahl",
+  "certificateCreate.shipping.title": "Versand",
   "certificateCreate.step-one.enum.vaccination": "Impfung",
   "certificateCreate.step-one.enum.test": "Negativer Test",
   "certificateCreate.step-one.enum.recovery": "Genesen (Positiver Test)",
@@ -62,9 +73,9 @@
   "dashboard.otp.title": "Neues One-Time-Password generieren",
   "dashboard.otp.description": "Hier können Sie ein neues One-Time-Password generieren. Das One-Time-Password benötigen Sie, um mit Ihrer Primäranwendung (z.B. Praxisinformationssystem, Kliniksoftware oder Apothekerlösung) automatisiert Covid-Zertifikate erzeugen zu können. Das One-Time-Password ist jeweils 12 Stunden gültig.",
   "dashboard.otp.action": "One-Time-Password generieren",
-  "dashboard.upload.action": "Mehrere Zertifikate generieren (BETA)",
+  "dashboard.upload.action": "Mehrere Zertifikate generieren",
   "dashboard.upload.description": "Hier können Sie mehrere Zertifikate generieren.",
-  "dashboard.upload.title": "Mehrere Zertifikate generieren (BETA)",
+  "dashboard.upload.title": "Mehrere Zertifikate generieren",
   "footer.built.prefix": "Mit",
   "footer.built.suffix": "gebaut",
   "footer.legal": "Rechtliches",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "Das Datum muss nach dem 31.12.1899 liegen",
   "i18n.validation.dateAfterToday": "Das Datum darf nicht in der Zukunft liegen",
   "i18n.validation.date": "Ein gültiges Datum wird benötigt",
+  "i18n.validation.invalidAppDeliveryCode": "Ungültiger Zustellungscode",
   "i18n.validation.time": "Eine gültige Zeit wird benötigt",
   "i18n.validation.timeAfterToday": "Das Datum darf nicht in der Zukunft liegen",
   "i18n.validation.matDatepickerParse": "Ungültiges Datumsformat, bitte verwenden Sie \"tt.mm.jjjj hh:mm\"",
@@ -102,9 +114,9 @@
   "upload.file.upload": "Zertifikate generieren",
   "upload.file.upload.success": "Zertifikate wurden erfolgreich erstellt. Bitte prüfen Sie die zurückgegebene ZIP Datei.",
   "upload.instructions": "Sie können hier mehrere Zertifikate generieren. Wählen Sie dazu bitte den Typ der zu erstellenden Zertifikate aus und laden Sie die CSV-Datei mit den Daten.",
-  "upload.link": "Mehrere Zertifikate generieren (BETA)",
+  "upload.link": "Mehrere Zertifikate generieren",
   "upload.templates": "Vorlagen zum CSV Upload.",
-  "upload.title": "Mehrere Zertifikate generieren (BETA)",
+  "upload.title": "Mehrere Zertifikate generieren",
   "upload.type": "Zertifikatstype auswählen",
   "validation.error.http.470": "Ungültiges UVCI-Format",
   "validation.error.http.480": "UVCI wurde bereits gesperrt",
