--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Pays où le test a été effectué",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date du premier résultat positif",
   "certificateCreate.form.label.recovery.countryOfTest": "Pays où le test a été effectué",
+  "certificateCreate.form.label.shipping": "Option d'envoi",
   "certificateCreate.form.group.personalData": "Données personnelles",
   "certificateCreate.form.group.vaccine": "Vaccin",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Test rapide antigénique",
   "certificateCreate.form.group.recovery": "Guérison",
+  "certificateCreate.shipping.app.code": "Code d'envoi",
+  "certificateCreate.shipping.options": "Sélectionnez l'option d'envoi",
+  "certificateCreate.shipping.options.app": "Délivrer le certificat dans l'application",
+  "certificateCreate.shipping.options.pdf": "Délivrer le certificat en format PDF",
+  "certificateCreate.shipping.options.post": "Délivrer le certificat par voie postale",
+  "certificateCreate.shipping.post.cantonCodeSender": "Code du canton expéditeur",
+  "certificateCreate.shipping.post.city": "Ville",
+  "certificateCreate.shipping.post.streetAndNr": "Rue et numéro de maison",
+  "certificateCreate.shipping.post.zipCode": "Code postal",
+  "certificateCreate.shipping.title": "Livraison",
   "certificateCreate.step-one.enum.vaccination": "Vaccin",
   "certificateCreate.step-one.enum.test": "Test négatif",
   "certificateCreate.step-one.enum.recovery": "Guérison (test positif)",
@@ -62,9 +73,9 @@
   "dashboard.otp.title": "Générer un nouvel One-Time-Password",
   "dashboard.otp.description": "Vous pouvez ici générer un nouvel One-Time-Password. Vous avez besoin du mot du One-Time-Password pour pouvoir générer automatiquement des certificats Covid avec votre system primaire (par exemple, le système d'information du cabinet, le logiciel de la clinique ou la solution pour pharmaciens). Le One-Time-Password est valable pendant 12 heures.",
   "dashboard.otp.action": "Générer un One-Time-Password",
-  "dashboard.upload.action": "Générer plusieurs certificats (BETA)",
+  "dashboard.upload.action": "Générer plusieurs certificats",
   "dashboard.upload.description": "Vous pouvez générer ici plusieurs certificats.",
-  "dashboard.upload.title": "Générer plusieurs certificats (BETA)",
+  "dashboard.upload.title": "Générer plusieurs certificats",
   "footer.built.prefix": "Développé avec",
   "footer.built.suffix": "",
   "footer.legal": "Conditions d'utilisation",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "La date doit être située après le 31.12.1899",
   "i18n.validation.dateAfterToday": "La date ne doit pas être située dans le futur",
   "i18n.validation.date": "Merci d'indiquer une date correcte",
+  "i18n.validation.invalidAppDeliveryCode": "Code d'envoi invalide",
   "i18n.validation.time": "Merci d'indiquer une heure correcte",
   "i18n.validation.timeAfterToday": "La date ne doit pas être située dans le futur",
   "i18n.validation.matDatepickerParse": "Format de date invalide, merci d'utiliser \"jj.mm.aaaa hh:mm\"",
@@ -102,9 +114,9 @@
   "upload.file.upload": "Générer des certificats",
   "upload.file.upload.success": "Les certificats ont été créés avec succès. Veuillez vérifier le fichier ZIP retourné.",
   "upload.instructions": "Vous pouvez générer plusieurs certificats. Pour ce faire, veuillez sélectionnez le type des certificats à générer et chargez le fichier CSV contenant les données.",
-  "upload.link": "Générer plusieurs certificats (BETA)",
+  "upload.link": "Générer plusieurs certificats",
   "upload.templates": "Modèles pour l'envoi de CSV.",
-  "upload.title": "Générer plusieurs certificats (BETA)",
+  "upload.title": "Générer plusieurs certificats",
   "upload.type": "Sélectionnez le type de certificat",
   "validation.error.http.470": "Format de l'UVCI invalide",
   "validation.error.http.480": "UVCI déjà verrouillé",
