--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -18,11 +18,22 @@
   "certificateCreate.form.label.test.countryOfTest": "Paese in cui è stato effettuato il test",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
   "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
+  "certificateCreate.form.label.shipping": "Opzione di spedizione",
   "certificateCreate.form.group.personalData": "Dati personali",
   "certificateCreate.form.group.vaccine": "Vaccinazione",
   "certificateCreate.form.group.test": "Test",
   "certificateCreate.form.group.test.type.antigen": "Test antigenico rapido",
   "certificateCreate.form.group.recovery": "Guarigione",
+  "certificateCreate.shipping.app.code": "Codice di spedizione",
+  "certificateCreate.shipping.options": "Selezionare l'opzione di invio",
+  "certificateCreate.shipping.options.app": "Rilasciare il certificato nell'applicazione",
+  "certificateCreate.shipping.options.pdf": "Rilasciare il certificato in formato PDF",
+  "certificateCreate.shipping.options.post": "Rilasciare il certificato per posta",
+  "certificateCreate.shipping.post.cantonCodeSender": "Codice cantonale mittente",
+  "certificateCreate.shipping.post.city": "Città",
+  "certificateCreate.shipping.post.streetAndNr": "Via e numero civico",
+  "certificateCreate.shipping.post.zipCode": "Codice postale",
+  "certificateCreate.shipping.title": "Consegna",
   "certificateCreate.step-one.enum.vaccination": "Vaccinazione",
   "certificateCreate.step-one.enum.test": "Test negativo",
   "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
@@ -62,9 +73,9 @@
   "dashboard.otp.title": "Generare una nuova One-Time-Password",
   "dashboard.otp.description": "Qui puoi generare una nuova One-Time-Password. Hai bisogno della One-Time-Password per essere in grado di generare automaticamente i certificati Covid con il tuo sistema primario (ad esempio il sistema informativo dello studio, il software della clinica o la soluzione del farmacista). La One-Time-Password generata è valida per 12 ore.",
   "dashboard.otp.action": "Genera One-Time-Password",
-  "dashboard.upload.action": "Generare più certificati (BETA)",
+  "dashboard.upload.action": "Generare più certificati",
   "dashboard.upload.description": "Qui potete generare più certificati.",
-  "dashboard.upload.title": "Generare più certificati (BETA)",
+  "dashboard.upload.title": "Generare più certificati",
   "footer.built.prefix": "Sviluppata con",
   "footer.built.suffix": "",
   "footer.legal": "Nota legale",
@@ -84,6 +95,7 @@
   "i18n.validation.dateTooSmall": "La data deve essere successiva al 31.12.1899",
   "i18n.validation.dateAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.date": "È richiesta una data valida",
+  "i18n.validation.invalidAppDeliveryCode": "Codice di spedizione non valido",
   "i18n.validation.time": "È richiesta un'ora valida",
   "i18n.validation.timeAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.matDatepickerParse": "Formato di data non valido, utilizzare \"dd.mm.yyyy hh:mm\"",
@@ -102,9 +114,9 @@
   "upload.file.upload": "Generare certificati",
   "upload.file.upload.success": "I certificati sono stati creati con successo. Si prega di controllare il file ZIP restituito.",
   "upload.instructions": "È possibile generare diversi certificati. Per farlo, seleziona il tipo di certificati da generare e carica il file CSV contenente i dati.",
-  "upload.link": "Generare più certificati (BETA)",
+  "upload.link": "Generare più certificati",
   "upload.templates": "Modelli per l'invio di CSV.",
-  "upload.title": "Generare più certificati (BETA)",
+  "upload.title": "Generare più certificati",
   "upload.type": "Seleziona il tipo di certificato",
   "validation.error.http.470": "Formato UVCI non valido",
   "validation.error.http.480": "UVCI già bloccato",
