--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -44,6 +44,8 @@
   "certificateCreate.step-three.dose": "Dose",
   "certificateCreate.step-three.validFrom": "Valide depuis le",
   "certificateCreate.step-three.validUntil": "Valide jusqu'au",
+  "certificateCreate.step-four.app.code.error.476": "Code d'envoi inconnu ou invalide. Le certificat n'a pas pu être délivré à l'application.",
+  "certificateCreate.step-four.app.code.error.558": "Problème technique. Le certificat n'a pas pu être délivré à l'application.",
   "certificateCreate.step-four.title": "Le certificat a été généré",
   "certificateCreate.step-four.warn": "Le PDF contient des données sensibles. Il doit être remis en personne ou transmis via un canal sécurisé.",
   "certificateCreate.step-four.description": "Vous pouvez désormais le télécharger ou laisser la personne vaccinée scanner le code QR affiché.",
