VACCINECER-886: added new info strings for testcenter and sample date time.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Testyp",
   "certificateCreate.form.label.test.manufacturer": "Hersteller",
   "certificateCreate.form.label.test.sampleDate": "Testdatum/-zeit",
+  "certificateCreate.form.label.test.sampleDate.info": "Hierbei handelt es sich, um den Zeitpunkt der Probenentnahme.",
   "certificateCreate.form.label.test.center": "Ausgeführt durch",
+  "certificateCreate.form.label.test.center.info": "Hierbei handelt sich bevorzugt um die Institution.",
   "certificateCreate.form.label.test.countryOfTest": "Land der Testdurchführung",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten postiven Resultats",
   "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
