--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Tipo di test",
   "certificateCreate.form.label.test.manufacturer": "Azienda produttrice",
   "certificateCreate.form.label.test.sampleDate": "Data/ora del test",
+  "certificateCreate.form.label.test.sampleDate.info": "Questa è l'ora in cui il campione è stato preso.",
   "certificateCreate.form.label.test.center": "Effettuato da",
+  "certificateCreate.form.label.test.center.info": "Questo è preferibilmente l'istituzione.",
   "certificateCreate.form.label.test.countryOfTest": "Paese in cui è stato effettuato il test",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
   "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
