--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Test type",
   "certificateCreate.form.label.test.manufacturer": "Manufacturer",
   "certificateCreate.form.label.test.sampleDate": "Date/time of test",
+  "certificateCreate.form.label.test.sampleDate.info": "This is the time at which the sample was taken.",
   "certificateCreate.form.label.test.center": "Performed by",
+  "certificateCreate.form.label.test.center.info": "This is preferably the institution.",
   "certificateCreate.form.label.test.countryOfTest": "Country where test performed",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date of first positive result",
   "certificateCreate.form.label.recovery.countryOfTest": "Country where test performed",
