--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Type de test",
   "certificateCreate.form.label.test.manufacturer": "Fabricant",
   "certificateCreate.form.label.test.sampleDate": "Date/heure du test",
+  "certificateCreate.form.label.test.sampleDate.info": "Il s'agit de l'heure à laquelle l'échantillon a été prélevé.",
   "certificateCreate.form.label.test.center": "Effectué par",
+  "certificateCreate.form.label.test.center.info": "Il s'agit de préférence de l'institution.",
   "certificateCreate.form.label.test.countryOfTest": "Pays où le test a été effectué",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date du premier résultat positif",
   "certificateCreate.form.label.recovery.countryOfTest": "Pays où le test a été effectué",
