--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -117,6 +117,7 @@
   "upload.file.select.limit": "Dimensione massima: 40 kB.",
   "upload.file.upload": "Generare certificati",
   "upload.file.upload.success": "I certificati sono stati creati con successo. Si prega di controllare il file ZIP restituito.",
+  "upload.file.upload.size.error": "Il file è troppo grande.",
   "upload.instructions": "È possibile generare diversi certificati. Per farlo, seleziona il tipo di certificati da generare e carica il file CSV contenente i dati.",
   "upload.link": "Generare più certificati",
   "upload.templates": "Modelli per l'invio di CSV.",
