--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -117,6 +117,7 @@
   "upload.file.select.limit": "Maximale Grösse: 40 Kb.",
   "upload.file.upload": "Zertifikate generieren",
   "upload.file.upload.success": "Zertifikate wurden erfolgreich erstellt. Bitte prüfen Sie die zurückgegebene ZIP Datei.",
+  "upload.file.upload.size.error": "Die Datei ist zu gross.",
   "upload.instructions": "Sie können hier mehrere Zertifikate generieren. Wählen Sie dazu bitte den Typ der zu erstellenden Zertifikate aus und laden Sie die CSV-Datei mit den Daten.",
   "upload.link": "Mehrere Zertifikate generieren",
   "upload.templates": "Vorlagen zum CSV Upload.",
