--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -117,6 +117,7 @@
   "upload.file.select.limit": "Maximum size: 40 Kb.",
   "upload.file.upload": "Generate certificates",
   "upload.file.upload.success": "Certificates were successfully created. Please check the returned ZIP file.",
+  "upload.file.upload.size.error": "The file is too big.",
   "upload.instructions": "Here you can generate multiple certificates. Please select the type of certificates to be generated and upload the CSV file containing the data.",
   "upload.link": "Generate multiple certificates",
   "upload.templates": "Templates for CSV upload.",
