--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Testyp",
   "certificateCreate.form.label.test.manufacturer": "Hersteller",
   "certificateCreate.form.label.test.sampleDate": "Testdatum/-zeit",
+  "certificateCreate.form.label.test.sampleDate.info": "Hierbei handelt es sich, um den Zeitpunkt der Probenentnahme.",
   "certificateCreate.form.label.test.center": "Ausgeführt durch",
+  "certificateCreate.form.label.test.center.info": "Hierbei handelt sich bevorzugt um die Institution.",
   "certificateCreate.form.label.test.countryOfTest": "Land der Testdurchführung",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten postiven Resultats",
   "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
@@ -112,9 +114,10 @@
   "support.title": "Support",
   "upload.file.noneSelected": "Kein CSV Datei ausgewählt.",
   "upload.file.select": "CSV Datei auswählen",
-  "upload.file.select.limit": "Maximale Grösse: 40 Kb.",
+  "upload.file.select.limit": "Maximale Grösse: 40 Kb. Maximale Einträge: 100",
   "upload.file.upload": "Zertifikate generieren",
   "upload.file.upload.success": "Zertifikate wurden erfolgreich erstellt. Bitte prüfen Sie die zurückgegebene ZIP Datei.",
+  "upload.file.upload.size.error": "Die Datei ist zu gross.",
   "upload.instructions": "Sie können hier mehrere Zertifikate generieren. Wählen Sie dazu bitte den Typ der zu erstellenden Zertifikate aus und laden Sie die CSV-Datei mit den Daten.",
   "upload.link": "Mehrere Zertifikate generieren",
   "upload.templates": "Vorlagen zum CSV Upload.",
