--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Test type",
   "certificateCreate.form.label.test.manufacturer": "Manufacturer",
   "certificateCreate.form.label.test.sampleDate": "Date/time of test",
+  "certificateCreate.form.label.test.sampleDate.info": "This is the time at which the sample was taken.",
   "certificateCreate.form.label.test.center": "Performed by",
+  "certificateCreate.form.label.test.center.info": "This is preferably the institution.",
   "certificateCreate.form.label.test.countryOfTest": "Country where test performed",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date of first positive result",
   "certificateCreate.form.label.recovery.countryOfTest": "Country where test performed",
@@ -112,9 +114,10 @@
   "support.title": "Support",
   "upload.file.noneSelected": "No CSV file selected.",
   "upload.file.select": "Select CSV file",
-  "upload.file.select.limit": "Maximum size: 40 Kb.",
+  "upload.file.select.limit": "Maximum size: 40 Kb. Maximum entries: 100.",
   "upload.file.upload": "Generate certificates",
   "upload.file.upload.success": "Certificates were successfully created. Please check the returned ZIP file.",
+  "upload.file.upload.size.error": "The file is too big.",
   "upload.instructions": "Here you can generate multiple certificates. Please select the type of certificates to be generated and upload the CSV file containing the data.",
   "upload.link": "Generate multiple certificates",
   "upload.templates": "Templates for CSV upload.",
