--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Type de test",
   "certificateCreate.form.label.test.manufacturer": "Fabricant",
   "certificateCreate.form.label.test.sampleDate": "Date/heure du test",
+  "certificateCreate.form.label.test.sampleDate.info": "Il s'agit de l'heure à laquelle l'échantillon a été prélevé.",
   "certificateCreate.form.label.test.center": "Effectué par",
+  "certificateCreate.form.label.test.center.info": "Il s'agit de préférence de l'institution.",
   "certificateCreate.form.label.test.countryOfTest": "Pays où le test a été effectué",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date du premier résultat positif",
   "certificateCreate.form.label.recovery.countryOfTest": "Pays où le test a été effectué",
@@ -112,9 +114,10 @@
   "support.title": "Support",
   "upload.file.noneSelected": "Aucun fichier CSV sélectionné.",
   "upload.file.select": "Sélectionnez un fichier CSV",
-  "upload.file.select.limit": "Taille maximale: 40 kB.",
+  "upload.file.select.limit": "Taille maximale: 40 kB. Nombre maximal d'entrées : 100.",
   "upload.file.upload": "Générer des certificats",
   "upload.file.upload.success": "Les certificats ont été créés avec succès. Veuillez vérifier le fichier ZIP retourné.",
+  "upload.file.upload.size.error": "Le fichier est trop grand.",
   "upload.instructions": "Vous pouvez générer plusieurs certificats. Pour ce faire, veuillez sélectionnez le type des certificats à générer et chargez le fichier CSV contenant les données.",
   "upload.link": "Générer plusieurs certificats",
   "upload.templates": "Modèles pour l'envoi de CSV.",
