--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -14,7 +14,9 @@
   "certificateCreate.form.label.test.typeOfTest": "Tipo di test",
   "certificateCreate.form.label.test.manufacturer": "Azienda produttrice",
   "certificateCreate.form.label.test.sampleDate": "Data/ora del test",
+  "certificateCreate.form.label.test.sampleDate.info": "Questa è l'ora in cui il campione è stato preso.",
   "certificateCreate.form.label.test.center": "Effettuato da",
+  "certificateCreate.form.label.test.center.info": "Questo è preferibilmente l'istituzione.",
   "certificateCreate.form.label.test.countryOfTest": "Paese in cui è stato effettuato il test",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
   "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
@@ -112,9 +114,10 @@
   "support.title": "Supporto",
   "upload.file.noneSelected": "Nessun file CSV selezionato.",
   "upload.file.select": "Selezionare un file CSV",
-  "upload.file.select.limit": "Dimensione massima: 40 kB.",
+  "upload.file.select.limit": "Dimensione massima: 40 kB. Voci massime: 100.",
   "upload.file.upload": "Generare certificati",
   "upload.file.upload.success": "I certificati sono stati creati con successo. Si prega di controllare il file ZIP restituito.",
+  "upload.file.upload.size.error": "Il file è troppo grande.",
   "upload.instructions": "È possibile generare diversi certificati. Per farlo, seleziona il tipo di certificati da generare e carica il file CSV contenente i dati.",
   "upload.link": "Generare più certificati",
   "upload.templates": "Modelli per l'invio di CSV.",
