--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -28,8 +28,8 @@
   "certificateCreate.form.group.recovery": "Genesung",
   "certificateCreate.shipping.app.code": "Zustellungscode",
   "certificateCreate.shipping.options": "Versand option auswählen",
-  "certificateCreate.shipping.options.app": "Zertifikat in der App liefern",
-  "certificateCreate.shipping.options.pdf": "Zertifikat im PDF format liefern",
+  "certificateCreate.shipping.options.app": "Zertifikat in die App liefern",
+  "certificateCreate.shipping.options.pdf": "Zertifikat im PDF Format liefern",
   "certificateCreate.shipping.options.post": "Zertifikat per Post liefern",
   "certificateCreate.shipping.post.cantonCodeSender": "Absender Kanton-Code",
   "certificateCreate.shipping.post.city": "Stadt",
