--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,7 +50,8 @@
   "certificateCreate.step-four.app.code.error.558": "Technical problem. The certificate could not be delivered to the app.",
   "certificateCreate.step-four.title": "Certificate generated",
   "certificateCreate.step-four.warn": "The PDF contains sensitive data. It must be handed over in person or sent via a secure channel.",
-  "certificateCreate.step-four.description": "You can now download the generated certificate or get the vaccinated person to scan the QR code shown here.",
+  "certificateCreate.step-four.description.vaccinated": "You can now download the generated certificate or get the vaccinated person to scan the QR code shown here.",
+  "certificateCreate.step-four.description.tested": "You can now download the generated certificate or get the tested person to scan the QR code shown here.",
   "certificateCreate.step-four.download": "Download certificate",
   "certificateCreate.step-four.generateNew": "Generate new certificate",
   "certificateCreate.step-four.warning": "The PDF contains sensitive data. It must be delivered in person or sent via a secure channel.",
