--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -50,7 +50,8 @@
   "certificateCreate.step-four.app.code.error.558": "Problème technique. Le certificat n'a pas pu être délivré à l'application.",
   "certificateCreate.step-four.title": "Le certificat a été généré",
   "certificateCreate.step-four.warn": "Le PDF contient des données sensibles. Il doit être remis en personne ou transmis via un canal sécurisé.",
-  "certificateCreate.step-four.description": "Vous pouvez désormais le télécharger ou laisser la personne vaccinée scanner le code QR affiché.",
+  "certificateCreate.step-four.description.vaccinated": "Vous pouvez désormais le télécharger ou laisser la personne vaccinée scanner le code QR affiché.",
+  "certificateCreate.step-four.description.tested": "Vous pouvez désormais le télécharger ou laisser la personne testée scanner le code QR affiché.",
   "certificateCreate.step-four.download": "Télécharger le certificat",
   "certificateCreate.step-four.generateNew": "Établir un nouveau certificat",
   "certificateCreate.step-four.warning": "Le PDF contient des données sensibles. Il doit être remis en personne ou envoyé par un canal sécurisé.",
