--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -50,7 +50,8 @@
   "certificateCreate.step-four.app.code.error.558": "Problema tecnico. Il certificato non può essere rilasciato nell' applicazione.",
   "certificateCreate.step-four.title": "Certificato generato",
   "certificateCreate.step-four.warn": "Il PDF contiene dati sensibili. Deve essere consegnato personalmente o trasmesso tramite un canale sicuro.",
-  "certificateCreate.step-four.description": "Ora è possibile scaricare il certificato generato o permettere alla persona vaccinata di scansionare il codice QR mostrato qui.",
+  "certificateCreate.step-four.description.vaccinated": "Ora è possibile scaricare il certificato generato o permettere alla persona vaccinata di scansionare il codice QR mostrato qui.",
+  "certificateCreate.step-four.description.tested": "Ora è possibile scaricare il certificato generato o permettere alla persona testata di scansionare il codice QR mostrato qui.",
   "certificateCreate.step-four.download": "Scarica certificato",
   "certificateCreate.step-four.generateNew": "Crea nuovo certificato",
   "certificateCreate.step-four.warning": "Il PDF contiene dati sensibili. Deve essere consegnato di persona o inviato attraverso un canale sicuro.",
