--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -18,7 +18,7 @@
   "certificateCreate.form.label.test.center": "Ausgeführt durch",
   "certificateCreate.form.label.test.center.info": "Hierbei handelt sich bevorzugt um die Institution.",
   "certificateCreate.form.label.test.countryOfTest": "Land der Testdurchführung",
-  "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten postiven Resultats",
+  "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten positiven Resultats",
   "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
   "certificateCreate.form.label.shipping": "Versand Option",
   "certificateCreate.form.group.personalData": "Personalien",
@@ -28,8 +28,8 @@
   "certificateCreate.form.group.recovery": "Genesung",
   "certificateCreate.shipping.app.code": "Zustellungscode",
   "certificateCreate.shipping.options": "Versand option auswählen",
-  "certificateCreate.shipping.options.app": "Zertifikat in der App liefern",
-  "certificateCreate.shipping.options.pdf": "Zertifikat im PDF format liefern",
+  "certificateCreate.shipping.options.app": "Zertifikat in die App liefern",
+  "certificateCreate.shipping.options.pdf": "Zertifikat im PDF-Format liefern",
   "certificateCreate.shipping.options.post": "Zertifikat per Post liefern",
   "certificateCreate.shipping.post.cantonCodeSender": "Absender Kanton-Code",
   "certificateCreate.shipping.post.city": "Stadt",
@@ -50,7 +50,8 @@
   "certificateCreate.step-four.app.code.error.558": "Technisches Problem. Das Zertifikat konnte nicht in die App geliefert werden.",
   "certificateCreate.step-four.title": "Generiertes Zertifikat",
   "certificateCreate.step-four.warn": "Das PDF enthält sensitive Daten. Es ist persönlich abzugeben oder auf einem sicheren Kanal zu übermitteln.",
-  "certificateCreate.step-four.description": "Sie können das generierte Zertifikat jetzt herunterladen oder den hier dargestellten QR-Code vom Geimpften einscannen lassen.",
+  "certificateCreate.step-four.description.vaccinated": "Sie können das generierte Zertifikat jetzt herunterladen oder den hier dargestellten QR-Code vom Geimpften einscannen lassen.",
+  "certificateCreate.step-four.description.tested": "Sie können das generierte Zertifikat jetzt herunterladen oder den hier dargestellten QR-Code vom Getesteten einscannen lassen.",
   "certificateCreate.step-four.download": "Zertifikat herunterladen",
   "certificateCreate.step-four.generateNew": "Neues Zertifikat erstellen",
   "certificateCreate.step-four.warning": "Das PDF enthält sensitive Daten. Es ist persönlich abzugeben oder auf einem sicheren Kanal zu übermitteln.",
