Add placeholder and infotext for UVCI format

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -61,6 +61,7 @@
   "certificateRevoke.success": "Zertifikat mit UVCI {{uvci}} wurde erfolgreich gesperrt.",
   "certificateRevoke.title": "Zertifikat sperren",
   "certificateRevoke.uvci": "UVCI",
+  "certificateRevoke.uvci.info": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
   "common.next": "Weiter",
   "common.back": "Zurück",
   "common.important": "Wichtig",
