--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -61,6 +61,7 @@
   "certificateRevoke.success": "Le certificat doté de l'UVCI {{uvci}} a été verrouillé avec succès.",
   "certificateRevoke.title": "Verrouiller le certificat",
   "certificateRevoke.uvci": "UVCI",
+  "certificateRevoke.uvci.info": "Format: urn:uvci:01:CH:xxxxxxxxxxxxxxxxxxxxxxxx",
   "common.next": "Suivant",
   "common.back": "Retour",
   "common.important": "Important",
