--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -12,7 +12,7 @@
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Date de la vaccination",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Pays de la vaccination",
   "certificateCreate.form.label.test.typeOfTest": "Type de test",
-  "certificateCreate.form.label.test.manufacturer": "Fabricant",
+  "certificateCreate.form.label.test.manufacturerAndName": "Fabricant et Nom",
   "certificateCreate.form.label.test.sampleDate": "Date/heure du test",
   "certificateCreate.form.label.test.sampleDate.info": "Il s'agit de l'heure à laquelle l'échantillon a été prélevé.",
   "certificateCreate.form.label.test.center": "Effectué par",
