Allow unusual birthdate as input

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,6 +5,7 @@
   "certificateCreate.form.label.personalData.firstName": "Vorname",
   "certificateCreate.form.label.personalData.surName": "Nachname",
   "certificateCreate.form.label.personalData.birthdate": "Geburtsdatum",
+  "certificateCreate.form.label.personalData.specialDate": "Spezielles Format",
   "certificateCreate.form.label.personalData.certificateLanguage": "Sprache des Zertifikats",
   "certificateCreate.form.label.vaccine.medicalProduct": "Impfprodukt",
   "certificateCreate.form.label.vaccine.doseNumber": "Erhaltene Dosen",
@@ -108,6 +109,7 @@
   "i18n.validation.timeInvalid": "Eine gültige Zeit wird benötigt (z.B. 14:30)",
   "i18n.validation.timeAfterToday": "Das Datum darf nicht in der Zukunft liegen",
   "i18n.validation.matDatepickerParse": "Ungültiges Datumsformat, bitte verwenden Sie \"tt.mm.jjjj hh:mm\"",
+  "i18n.validation.invalidShortDate": "Ungültiges Datumsformat, bitte verwenden Sie \"jjjj\" oder \"jjjj-mm\"",
   "logout": "Logout",
   "otp.button.copy": "In die Zwischenablage kopieren",
   "otp.button.create": "Geheimschlüssel erzeugen",
