--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
   "certificateCreate.form.label.personalData.firstName": "First name",
   "certificateCreate.form.label.personalData.surName": "Last name",
   "certificateCreate.form.label.personalData.birthdate": "Date of birth",
+  "certificateCreate.form.label.personalData.specialDate": "Unusual format",
   "certificateCreate.form.label.personalData.certificateLanguage": "Language of certificate",
   "certificateCreate.form.label.vaccine.medicalProduct": "Vaccine product",
   "certificateCreate.form.label.vaccine.doseNumber": "Doses received",
@@ -107,6 +108,7 @@
   "i18n.validation.timeInvalid": "A valid time is needed (e.g. 14:30)",
   "i18n.validation.timeAfterToday": "The date cannot be in the future",
   "i18n.validation.matDatepickerParse": "Invalid date format. Please use \"dd.mm.yyyy hh:mm\"",
+  "i18n.validation.invalidShortDate": "Invalid date format. Please use \"jjjj\" or \"jjjj-mm\"",
   "logout": "Logout",
   "otp.button.copy": "Copy to the clipboard",
   "otp.button.create": "Generate private key",
