--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -5,6 +5,7 @@
   "certificateCreate.form.label.personalData.firstName": "Prénom",
   "certificateCreate.form.label.personalData.surName": "Nom",
   "certificateCreate.form.label.personalData.birthdate": "Date de naissance",
+  "certificateCreate.form.label.personalData.specialDate": "Format inhabituel",
   "certificateCreate.form.label.personalData.certificateLanguage": "Langue du certificat",
   "certificateCreate.form.label.vaccine.medicalProduct": "Produit",
   "certificateCreate.form.label.vaccine.doseNumber": "Doses reçues",
@@ -107,6 +108,7 @@
   "i18n.validation.timeInvalid": "Merci d'indiquer une heure correcte (e.g. 14:30)",
   "i18n.validation.timeAfterToday": "La date ne doit pas être située dans le futur",
   "i18n.validation.matDatepickerParse": "Format de date invalide, merci d'utiliser \"jj.mm.aaaa hh:mm\"",
+  "i18n.validation.invalidShortDate": "Format de date invalide, merci d'utiliser \"jjjj\" ou \"jjjj-mm\"",
   "logout": "Déconnexion",
   "otp.button.copy": "Copier dans le presse-papier",
   "otp.button.create": "Créer une clé secrète",
