--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -6,6 +6,7 @@
   "certificateCreate.form.label.personalData.surName": "Cognome",
   "certificateCreate.form.label.personalData.birthdate": "Data di nascita",
   "certificateCreate.form.label.personalData.certificateLanguage": "Lingua del certificato",
+  "certificateCreate.form.label.personalData.specialDate": "Formato insolito",
   "certificateCreate.form.label.vaccine.medicalProduct": "Vaccino",
   "certificateCreate.form.label.vaccine.doseNumber": "Dosi ricevute",
   "certificateCreate.form.label.vaccine.totalDoses": "Dosi necessarie",
@@ -107,6 +108,7 @@
   "i18n.validation.timeInvalid": "È richiesta un'ora valida (e.g. 14:30)",
   "i18n.validation.timeAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.matDatepickerParse": "Formato di data non valido, utilizzare \"dd.mm.yyyy hh:mm\"",
+  "i18n.validation.invalidShortDate": "Formato di data non valido, utilizzare \"jjjj\" o \"jjjj-mm\"",
   "logout": "Logout",
   "otp.button.copy": "Copia negli appunti",
   "otp.button.create": "Crea chiave segreta",
