--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -130,6 +130,7 @@
   "upload.templates": "Vorlagen zum CSV Upload.",
   "upload.title": "Mehrere Zertifikate generieren",
   "upload.type": "Zertifikatstype auswählen",
+  "validation.error.http.453": "Ungültiges Geburtsdatum. Bite überprüfen Sie Ihre Eingabe in Schritt zwei.",
   "validation.error.http.470": "Ungültiges UVCI-Format",
   "validation.error.http.480": "UVCI wurde bereits gesperrt",
   "validation.error.http.485": "Eine oder mehrere der Anfragen in der CSV enthalten ungültige Daten. Für detailliertere Fehlermeldungen prüfen Sie die zurückgegebene CSV Datei."
