Update error message for invalid size of CSV

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -132,5 +132,6 @@
   "validation.error.http.453": "Invalid date of birth. Please check your input in step two.",
   "validation.error.http.470": "Invalid UVCI format",
   "validation.error.http.480": "UVCI already revoked",
+  "validation.error.http.482": "The CSV was not processed due to an invalid size. It must contain 1 to 100 entries.",
   "validation.error.http.485": "One or more of the requests in the CSV contain invalid data. For more detailed error messages check the returned CSV file."
 }
