--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -132,5 +132,6 @@
   "validation.error.http.453": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
   "validation.error.http.470": "Formato UVCI non valido",
   "validation.error.http.480": "UVCI già bloccato",
+  "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
   "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito."
 }
